--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -15,7 +15,7 @@ jobs:
           distribution: 'corretto'
           architecture: x64
           
-      - name: "Run maven test"
+      - name: "Run maven package"
         run: mvn -DskipTests package
 
       - run: ls -la target/
