--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -1,5 +1,8 @@
 name: Create package
-on: [push]
+on: 
+  push:
+    tags:
+      - "v*.*.*"
 
 jobs: 
   BuildPackage:
@@ -19,3 +22,12 @@ jobs:
         run: mvn -DskipTests package
 
       - run: ls -la target/
+
+      - run: mv target/*.jar target/app.jar
+
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: "target/app.jar"
+          body: "My release ${{ github.ref }}"
+          name: "Release candidate ${{ github.ref }}"
+      
